core/force-app/main/default/objects/NotificationEvent__e/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <description>Entity ID of the Service Event</description>
    <label>Entity Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>