core/force-app/main/default/objects/NotificationEvent__e/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <description>Locale of the Service Event</description>
    <label>Locale</label>
    <length>5</length>
    <type>Text</type>
</CustomField>