core/force-app/main/default/objects/NotificationEvent__e/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <description>Parameter of the Service Event</description>
    <label>Parameter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>